# LumiNESK

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
luminesk/: __main__.py  main.py
luminesk/cli/: main.py
luminesk/core/: config.py  doctor.py  manager.py  messages.py  registry.py
luminesk/gui/: app.py  constants.py  routes.py  services.py  views.py
luminesk/gui/static/: app.css  server.js
luminesk/gui/templates/: base.html  server.html  servers.html
luminesk/tui/: __init__.py  app.py  formatting.py  launcher.py  models.py  screens.py
luminesk/tui/styles/: app.tcss
luminesk/utils/: download_models.py  downloads.py  errors.py  github_releases.py  http.py  jenkins.py  logs.py  maven.py  rich_utils.py  tmux.py
scripts/: core_download_urls.py
tests/: test_config.py  test_downloads.py  test_manager_helpers.py  test_messages.py
